--- a/graph-generator-lib/Cargo.toml
+++ b/graph-generator-lib/Cargo.toml
@@ -2,23 +2,31 @@
 name = "graph-generator-lib"
 version = "0.1.0"
 authors = ["Insanitybit <insanitybit@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 
-#graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
-graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descriptions" , version="*"}
+graph-descriptions = {package="grapl-graph-descriptions" , version="*"}
+#graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descriptions" , version="*"}
 
 failure = "0.1.2"
 
 sha2 = "0.7.1"
-rusoto_core = {version = "0.40.0", default_features = false, features=["rustls"]}
-rusoto_s3 = {version = "0.40.0", default_features = false, features=["rustls"]}
-rusoto_sqs = {version = "0.40.0", default_features = false, features=["rustls"]}
 
-futures = "0.1.23"
+rusoto_s3 = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
+rusoto_core = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
+rusoto_sqs = {version="0.43.0-beta.1", default_features = false, features=["rustls"]}
+rusoto_credential = "0.43.0"
+
+lambda_runtime = "*"
+futures = "0.3"
 base64 = "0.9.2"
 prost = "0.4.0"
 serde_json = "1.0.24"
 log = "0.4.3"
-base16 = "0.1.1"
-zstd = "0.4.21+zstd.1.3.7"
+zstd = "0.5"
+tokio-compat = "0.1.2"
+tokio = { version = "0.2.4", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
+aws_lambda_events = "0.3.0"
+sqs-lambda = "0.20.7"
+chrono = "0.4.11"
