--- a/sysmon-subgraph-generator/Cargo.toml
+++ b/sysmon-subgraph-generator/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 graph-descriptions = {package="grapl-graph-descriptions", version="*"}
-grapl-config = {path = "../grapl-config"}
+grapl-config = {path = "../grapl-config", version="*"}
 
 sqs-lambda = "0.20.*"
 serde_json = "*"
