--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
     build:
       context: ./engagement_ux/engagement_edge/
       dockerfile: ./Dockerfile
+    environment:
+      - GRAPL_LOG_LEVEL=INFO
     volumes:
       - ./local_grapl/:/var/run/target/
     command: python /var/run/target/grapl_provision.py
@@ -43,6 +45,8 @@ services:
     build:
       context: ./engagement_ux/engagement_edge/
       dockerfile: ./Dockerfile
+    environment:
+      - GRAPL_LOG_LEVEL=INFO
     volumes:
       - ./local_grapl/local_dynamodb:/var/run/target/
     command: python /var/run/target/provision_local_identity_table.py
@@ -75,6 +79,7 @@ services:
     environment:
       - BUCKET_PREFIX="local-grapl"
       - IS_LOCAL="True"
+      - GRAPL_LOG_LEVEL=INFO
     links:
       - s3:minio
       - sqs:sqs.us-east-1.amazonaws.com
@@ -93,6 +98,7 @@ services:
     environment:
       - BUCKET_PREFIX="local-grapl"
       - IS_LOCAL="True"
+      - GRAPL_LOG_LEVEL=INFO
     tty: false
     links:
       - s3:minio
@@ -115,6 +121,7 @@ services:
     environment:
       - BUCKET_PREFIX="local-grapl"
       - IS_LOCAL="True"
+      - GRAPL_LOG_LEVEL=INFO
     tty: false
     links:
       - s3:minio
@@ -135,6 +142,7 @@ services:
     environment:
       - BUCKET_PREFIX="local-grapl"
       - IS_LOCAL="True"
+      - GRAPL_LOG_LEVEL=INFO
     tty: false
     links:
       - s3:minio
@@ -155,6 +163,7 @@ services:
     environment:
       - BUCKET_PREFIX="local-grapl"
       - IS_LOCAL="True"
+      - GRAPL_LOG_LEVEL=INFO
     tty: false
     links:
       - s3:minio
@@ -177,6 +186,7 @@ services:
       - MG_ALPHAS=master_graph
       - IS_RETRY="False"
       - BUCKET_PREFIX=local-grapl
+      - GRAPL_LOG_LEVEL=INFO
     command: python3 /src/analyzer-executor.py
     links:
       - s3:minio
@@ -195,7 +205,8 @@ services:
       dockerfile: ./Dockerfile
     environment:
       - IS_LOCAL="True"
-      - BUCKET_PREFIX=local-grapl
+      - BUCKET_PREFIX="local-grapl"
+      - GRAPL_LOG_LEVEL=INFO
     command: python3 /src/engagement-creator.py
     tty: true
     links:
@@ -216,6 +227,7 @@ services:
       - "8900:8900"
     environment:
       - IS_LOCAL="True"
+      - GRAPL_LOG_LEVEL=INFO
     command: chalice local --no-autoreload --host=0.0.0.0 --port=8900
     tty: true
     links:
@@ -229,6 +241,7 @@ services:
       - "8123:8123"
     environment:
       - IS_LOCAL="True"
+      - GRAPL_LOG_LEVEL=INFO
     command: chalice local --no-autoreload --host=0.0.0.0 --port=8123
     tty: true
     links:
