--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -173,7 +173,7 @@ services:
 
   grapl-analyzer-executor:
     image: grapl/grapl-analyzer-executor:${TAG:-latest}
-    command: python3 /src/analyzer-executor.py
+    command: /bin/sh -c '. venv/bin/activate && python3 analyzer_executor/analyzer_executor.py'
     environment:
       - "IS_LOCAL=True"
       - GRPC_ENABLE_FORK_SUPPORT=1
@@ -194,7 +194,7 @@ services:
 
   grapl-engagement-creator:
     image: grapl/grapl-engagement-creator:${TAG:-latest}
-    command: python3 /src/engagement-creator.py
+    command: /bin/sh -c '. venv/bin/activate && python3 /engagement-creator/engagement-creator.py'
     environment:
       - "IS_LOCAL=True"
       - "BUCKET_PREFIX=local-grapl"
@@ -212,7 +212,7 @@ services:
 
   grapl-engagement-edge:
     image: grapl/grapl-engagement-edge:${TAG:-latest}
-    command: chalice local --no-autoreload --host=0.0.0.0 --port=8900
+    command: /bin/sh -c '. venv/bin/activate && chalice local --no-autoreload --host=0.0.0.0 --port=8900'
     ports:
       - "8900:8900"
     environment:
@@ -224,7 +224,7 @@ services:
 
   grapl-model-plugin-deployer:
     image: grapl/grapl-model-plugin-deployer:${TAG:-latest}
-    command: chalice local --no-autoreload --host=0.0.0.0 --port=8123
+    command: /bin/sh -c '. venv/bin/activate && chalice local --no-autoreload --host=0.0.0.0 --port=8123'
     ports:
       - "8123:8123"
     environment:
@@ -266,7 +266,7 @@ services:
 
   grapl-graph-provision:
     image: grapl/grapl-graph-provision:${TAG:-latest}
-    command: python /var/run/target/grapl_provision.py
+    command: /bin/sh -c '. venv/bin/activate && python /var/run/target/grapl_provision.py'
     environment:
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
     volumes:
@@ -289,7 +289,7 @@ services:
 
   grapl-dynamodb-provision:
     image: grapl/grapl-dynamodb-provision:${TAG:-latest}
-    command: python /var/run/target/provision_local_identity_table.py
+    command: /bin/sh -c '. venv/bin/activate && python /var/run/target/provision_local_identity_table.py'
     environment:
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-ERROR}
     volumes:
