--- a/src/python/analyzer_executor/Dockerfile
+++ b/src/python/analyzer_executor/Dockerfile
@@ -1,14 +1,18 @@
-FROM grapl/grapl-python-lambda-builder AS analyzer-executor-build
-WORKDIR /lambda
-COPY ./requirements.txt /tmp
-RUN pip install --quiet -t /lambda -r /tmp/requirements.txt
-COPY ./src/ /lambda/
-RUN python -m compileall -q /lambda
-RUN zip --quiet -9r /lambda.zip .
+FROM grapl/grapl-graph-descriptions-python-build AS analyzer-executor-build
+USER grapl
+WORKDIR /home/grapl
+COPY --chown=grapl . analyzer_executor
+COPY --from=grapl/grapl-graph-descriptions-python-build /home/grapl/venv venv
+# RUN python setup.py test
+RUN source venv/bin/activate && cd analyzer_executor && pip install .
+RUN zip --quiet -9r lambda.zip venv/lib/python3.7/site-packages/
+RUN zip -g lambda.zip analyzer_executor/src/analyzer-executor.py
 
-FROM grapl/grapl-python-lambda-builder AS grapl-analyzer-executor
-COPY ./requirements.txt /tmp
-RUN pip install -r /tmp/requirements.txt
-WORKDIR /src
-COPY ./src/ /src/
-COPY --from=analyzer-executor-build /lambda.zip /
+FROM python:3.7-alpine AS grapl-analyzer-executor
+RUN adduser -D --gecos '' --home /home/grapl --shell /bin/bash grapl
+USER grapl
+ENV USER grapl
+WORKDIR /home/grapl
+COPY --from=analyzer-executor-build /home/grapl/lambda.zip lambda.zip
+COPY --from=analyzer-executor-build /home/grapl/venv venv
+COPY --from=analyzer-executor-build /home/grapl/analyzer_executor analyzer_executor
