--- a/src/python/analyzer_executor/requirements.txt
+++ b/src/python/analyzer_executor/requirements.txt
@@ -1,6 +1,7 @@
 pydgraph==2.0.*
 boto3
 grapl-analyzerlib==0.2.59
+grapl_graph_descriptions==1.0.0
 grapl_os_user_analyzer_plugin==0.1.13
 grapl_ipc_analyzer_plugin==0.0.2
 redis
