--- a/dobi.yaml
+++ b/dobi.yaml
@@ -326,6 +326,17 @@ image=dynamodb-provision:
   tags:
     - "{env.TAG}"
 
+image=grapl-e2e-tests-build:
+  image: grapl/grapl-e2e-tests-build
+  context: src/python/grapl_e2e_tests/
+  dockerfile: Dockerfile
+  target: grapl-e2e-tests-build
+  depends:
+    - grapl-analyzerlib-build
+    # probably many more
+  tags:
+    - latest
+
 # js images
 
 image=grapl-cdk-build:
@@ -522,6 +533,18 @@ job=run-analyzer-deployer-integration-tests:
     - GRAPL_LOG_LEVEL=INFO
     - "BUCKET_PREFIX=local-grapl"
     - "IS_LOCAL=True"
+  depends:
+    - integration-env
+
+job=run-e2e-integration-tests:
+  use: grapl-e2e-tests-build
+  net-mode: grapl-integration-tests_default
+  command: /bin/bash -c "sleep 5 && source venv/bin/activate && cd grapl_e2e_tests && python3 ./main.py"
+  env:
+    - GRAPL_LOG_LEVEL=INFO
+    - "BUCKET_PREFIX=local-grapl"
+    - "IS_LOCAL=True"
+    - "MG_ALPHAS=grapl-master-graph-db:9080"
   depends:
     - integration-env
 
