--- a/src/rust/metric-forwarder/Cargo.toml
+++ b/src/rust/metric-forwarder/Cargo.toml
@@ -10,10 +10,14 @@ grapl-config = {path="../grapl-config", version="*"}
 async-trait = "0.1.22"
 aws_lambda_events = "0.2.1"
 base64 = "0.10.1"
+chrono = "0.4.18"
 flate2 = "1.0.6"
 futures = "0.3.*"
+hmap = "0.1.0"
+itertools = "0.9.0"
 lambda_runtime = "0.2.*"
 log = "0.4.6"
+ordered-float = "2.0.0"
 rayon = "1.0.3"
 rusoto_cloudwatch = { version="0.43.0", default_features = false, features=["rustls"] }
 rusoto_core = { version="0.43.0", default_features = false, features=["rustls"] }
