--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -127,15 +127,6 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-          
-      - name: TEMP TO BE REVERTED - print Python version
-        run: python -c "import sys; print(sys.version);"
-      
-      - name: TEMP TO BE REVERTED - print Python compare
-        run: python -c "import sys; print(sys.version_info >= (3, 7));"
-        
-      - name: TEMP TO BE REVERTED - what if i call it with Python
-        run: python ./etc/ci_scripts/dump_compose_logs.sh"
 
       - name: Prepare Github Actions CI
         run: |
@@ -154,7 +145,7 @@ jobs:
       - name: 'Collect e2e test logs'
         if: ${{ always() }}
         run: |
-          ./etc/ci_scripts/dump_compose_logs.py --compose-project "grapl-integration-tests"
+          python ./etc/ci_scripts/dump_compose_logs.py --compose-project "grapl-integration-tests"
 
       - name: 'Upload e2e test logs'
         if: ${{ always() }}
